# my-led-lamp

./: .gitignore  CMakeLists.txt  README.md  index.cpp
libraries/: Controller.cpp  Controller.h  EffectStrategy.cpp  EffectStrategy.h  Slicer.cpp  Slicer.h
libraries/Effects/: FadeInOut.cpp  FadeInOut.h  Fire.cpp  Fire.h  Meteor.cpp  Meteor.h  Rainbow.cpp  Rainbow.h  RunningLights.cpp  RunningLights.h  Strobe.cpp  Strobe.h  WhiteLampEffect.cpp  WhiteLampEffect.h
